# nest_rs

./: .env  .gitignore  Cargo.toml  README.md  curl.sh  diesel.toml  docker-compose.yml
docker/: .env  docker-compose.yml
docker_moongo/: docker-compose.yml
migrations/2025-07-23-202353_product/: up.sql
migrations/2025-07-30-202930_product_image/: down.sql  up.sql
migrations/2025-08-13-221802_drop_product_images_column/: down.sql  up.sql
migrations/2025-08-30-202930_product_image/: down.sql
migrations/2025-09-15-195100_user_auth/: down.sql  up.sql
src/: main.rs  schema.rs
src/app/: mod.rs
src/app/config/: env.rs
src/app/module/: mod.rs
src/app/module/auth/: handlers.rs  mod.rs  models.rs  repositories.rs  routes.rs  services.rs
src/app/module/city/: handlers.rs  mod.rs  models.rs  repositories.rs  routes.rs  services.rs
src/app/module/file/: handlers.rs  mod.rs  routes.rs
src/app/module/product/: handlers.rs  mod.rs  models.rs  repositories.rs  routes.rs  services.rs
src/app/module/team/: handlers.rs  mod.rs  models.rs  repositories.rs  routes.rs  services.rs
src/app/shared/: mod.rs
src/app/shared/api/: api_request.rs
src/app/shared/common/: error.rs  http_error.rs  message_detail.rs  mod.rs  pagination_dto.rs
src/app/shared/contract/: mod.rs
src/app/shared/database/: diesel.rs  mod.rs  mongo.rs  sqlx_mysql.rs
src/app/shared/error/: error.rs
src/app/shared/helper/: file_helper.rs
src/app/shared/middleware/: authentication.rs  mod.rs  validate.rs
src/app/shared/state/: state.rs
src/app/shared/validation/: validation.rs
(+1 files in other folders)
