[package]
name = "nestrs_guide"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
diesel = { version = "2.2.0", features = ["postgres","uuid","r2d2"] }
dotenvy = "0.15.0"
serde = { version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4","serde"] }
validator = { version = "0.20.0", features = ["derive"] }

